--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ networkx==3.2.1
 numba==0.60.0
 numpy==1.26.3
 nvidia-cublas-cu12==12.4.2.65
-nvidia-cuda-cupti-cu12==12.4.99
+#nvidia-cuda-cupti-cu12==12.4.99
 nvidia-cuda-nvrtc-cu12==12.4.99
 nvidia-cuda-runtime-cu12==12.4.99
 nvidia-cudnn-cu12==9.1.0.70
@@ -86,13 +86,13 @@ tifffile==2024.8.30
 timm==1.0.9
 tokenizers==0.15.2
 tomli==2.0.1
-torch==2.4.1+cu124
-torchaudio==2.4.1+cu124
-torchvision==0.19.1+cu124
+#torch==2.4.1+cu124
+#torchaudio==2.4.1+cu124
+#torchvision==0.19.1+cu124
 tqdm==4.66.5
 transformers==4.37.2
 triton==3.0.0
-typing_extensions==4.9.0
+#typing_extensions==4.9.0
 tzdata==2024.1
 urllib3==2.2.2
 wcwidth==0.2.13
